--- a/dangerous-frontend/styles.css
+++ b/dangerous-frontend/styles.css
@@ -6,12 +6,18 @@ body {
   color: #FFF;
   font-family: Helvetica, Sans-Serif;
   text-align: center;
-  font-size: 36px;
+  font-size: 16px;
+}
+.handle {
+  width: 100%;
+  height: 40px;
+  -webkit-app-region: drag;
+}
+.content {
   padding-left: 30px;
   padding-right: 30px;
-  padding-top: 30%;
 }
 img {
-  height: 480px;
+  height: 200px;
   margin: auto;
 }
